--- a/HmiPro/Views/DMes/SchTaskAxisView.xaml
+++ b/HmiPro/Views/DMes/SchTaskAxisView.xaml
@@ -25,11 +25,11 @@
                              />
         </dxg:GridControl.View>
         <dxg:GridControl.Columns >
-            <dxg:GridColumn Width="3*" Header="轴号" FieldName="axiscode"/>
+            <dxg:GridColumn Width="1.5*" Header="轴号" FieldName="axiscode"/>
             <dxg:GridColumn Width="*" Header="长度" FieldName="length"/>
             <dxg:GridColumn Width="*" Header="颜色" FieldName="color" />
             <dxg:GridColumn Width="*" Header="完成率" FieldName="CompletedRate"/>
-            <dxg:GridColumn Width="2*" Header="状态" FieldName="State"/>
+            <dxg:GridColumn Width="*" Header="状态" FieldName="State"/>
             <dxg:GridColumn Header="操作" Width="2*" FieldName="CanStart">
                 <dxg:GridColumn.DisplayTemplate>
                     <ControlTemplate>
