--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -1,38 +1,28 @@
-﻿<UserControl x:Class="HmiPro.Views.DMes.DMesManuView"
+﻿<UserControl x:Class="HmiPro.Views.DMes.DMesCoreView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-             xmlns:dMes="clr-namespace:HmiPro.ViewModels.DMes"
-             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-             xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
-             xmlns:converts="clr-namespace:HmiPro.Converts"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:Model="clr-namespace:HmiPro.ViewModels.DMes.Tab"
-             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-             xmlns:mqModels="clr-namespace:HmiPro.Redux.Models"
-             xmlns:generic="clr-namespace:System.Collections.Generic;assembly=mscorlib"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
-             xmlns:controls="clr-namespace:HmiPro.Controls"
-             xmlns:dMes1="clr-namespace:HmiPro.Views.DMes"
-             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
              xmlns:sys="clr-namespace:HmiPro.Views.Sys"
+             xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:Model="clr-namespace:HmiPro.ViewModels.DMes.Tab"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dMes="clr-namespace:HmiPro.Views.DMes"
+             xmlns:dMes1="clr-namespace:HmiPro.ViewModels.DMes"
+             xmlns:controls="clr-namespace:HmiPro.Controls"
              mc:Ignorable="d"
-             DataContext="{dxmvvm:ViewModelSource Type=dMes:DMesManuViewModel}"
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <converts:CoefConverter x:Key="ConverterCoef"/>
-        <converts:MultiParamsConvert x:Key="MultiParamsConvert"></converts:MultiParamsConvert>
-    </UserControl.Resources>
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:DispatcherService />
         <dxmvvm:EventToCommand EventName="Loaded" Command="{Binding OnLoadedCommand}"/>
-        <dxmvvm:EventToCommand EventName="ContentRendered" Command="{Binding OnContentRenderedCommand}"/>
+        <dxmvvm:VisualStateService/>
     </dxmvvm:Interaction.Behaviors>
-    <dxwui:PageAdornerControl  Header="DMes 系统" ShowBackButton="True" BackCommand="{Binding GoBackCommand}">
-        <Grid Height="Auto" x:Name="TopGird">
+    <dxwui:PageAdornerControl  Header="{Binding Header}" ShowBackButton="True">
+        <Grid Height="Auto" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
@@ -43,6 +33,7 @@
                 </DataTemplate>
             </Grid.Resources>
             <sys:NavigatorView Grid.Row="0"/>
+
             <dx:DXTabControl Grid.Row="1" ItemsSource="{Binding Path=ViewSource}" ItemHeaderTemplate="{StaticResource TabHeader}" >
                 <dx:DXTabControl.Resources>
                     <!--采集参数页面-->
@@ -98,11 +89,11 @@
                                     </Grid>
                                     <dx:DXTabControl Grid.Row="1" ItemsSource="{Binding Path=MqSchTaskDetails}" ItemHeaderTemplate="{StaticResource TabHeader}" >
                                         <dx:DXTabControl.Resources>
-                                            <DataTemplate DataType="{x:Type dMes:SchTaskAxisViewModel}">
-                                                <dMes1:SchTaskAxisView DataContext="{Binding Path=.}"/>
+                                            <DataTemplate DataType="{x:Type dMes1:SchTaskAxisViewModel}">
+                                                <dMes:SchTaskAxisView DataContext="{Binding Path=.}"/>
                                             </DataTemplate>
-                                            <DataTemplate DataType="{x:Type dMes:CraftBomViewModel}">
-                                                <dMes1:CraftBomView DataContext="{Binding Path=.}"/>
+                                            <DataTemplate DataType="{x:Type dMes1:CraftBomViewModel}">
+                                                <dMes:CraftBomView DataContext="{Binding Path=.}"/>
                                             </DataTemplate>
                                         </dx:DXTabControl.Resources>
                                     </dx:DXTabControl>
@@ -191,6 +182,8 @@
                     </DataTemplate>
                 </dx:DXTabControl.Resources>
             </dx:DXTabControl>
+
         </Grid>
     </dxwui:PageAdornerControl>
+
 </UserControl>
