--- a/HmiPro/Views/Dx/LoadingWindow.xaml
+++ b/HmiPro/Views/Dx/LoadingWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:dx="clr-namespace:HmiPro.Views.Dx"
         mc:Ignorable="d"
+        
         WindowStyle="None" ResizeMode="NoResize" SizeToContent="WidthAndHeight"
         AllowsTransparency="True" Background="Transparent" ShowInTaskbar="False" Topmost="True"
     >
-    <dx:LoadingView/>
+    <dx:LoadingView Background="Black"/>
 </Window>
