--- a/HmiPro/Themes/PubTheme.xaml
+++ b/HmiPro/Themes/PubTheme.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol">
+                    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+                    xmlns:internal="http://schemas.devexpress.com/winfx/2008/xaml/windowsui/internal"
+                    xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui">
     <Style TargetType="{x:Type dxlc:Tile}">
         <Setter Property="FontFamily" Value="微软雅黑" />
     </Style>
@@ -11,5 +13,82 @@
     <Style TargetType="Run">
         <Setter Property="FontFamily" Value="微软雅黑"></Setter>
         <Setter Property="FontSize" Value="15"></Setter>
+    </Style>
+
+    <Style x:Key="ModuleLinkButton" TargetType="Button">
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Grid Background="#00FF0000" Cursor="Hand">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualStateGroup.Transitions>
+                                    <VisualTransition GeneratedDuration="0" To="MouseOver">
+                                        <Storyboard>
+                                            <DoubleAnimation Duration="0:0:0.15" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="TextBlock" />
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="MouseOver" GeneratedDuration="0">
+                                        <Storyboard>
+                                            <!--<DoubleAnimation Duration="0:0:0.3" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="TextBlock" />-->
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="Disabled" GeneratedDuration="0">
+                                        <Storyboard>
+                                            <!--<DoubleAnimation Duration="0:0:0.2" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="TextBlock" />-->
+                                        </Storyboard>
+                                    </VisualTransition>
+                                </VisualStateGroup.Transitions>
+                                <VisualState x:Name="Disabled" >
+                                    <Storyboard>
+                                        <DoubleAnimation To="1.0" Duration="0:0:0.5" Storyboard.TargetName="TextBlock" Storyboard.TargetProperty="(UIElement.Opacity)"/>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="TextBlock" Storyboard.TargetProperty="Foreground">
+                                            <DiscreteObjectKeyFrame KeyTime="0">
+                                                <DiscreteObjectKeyFrame.Value>
+                                                    <SolidColorBrush>#f78a09</SolidColorBrush>
+                                                </DiscreteObjectKeyFrame.Value>
+                                            </DiscreteObjectKeyFrame>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="MouseOver" >
+                                    <Storyboard>
+                                        <DoubleAnimation To="1.0" Duration="0:0:0.15" Storyboard.TargetName="TextBlock" Storyboard.TargetProperty="(UIElement.Opacity)"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <TextBlock x:Name="TextBlock" Text="{TemplateBinding Content}"   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Foreground="#FFE3E3E3" FontSize="{TemplateBinding FontSize}" Opacity="{DXBinding 'IsSelected ? 1:0.5'}" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="dxwui:PageAdornerControl">
+        <Setter Property="Padding" Value="0,-50,0,0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="dxwui:PageAdornerControl" >
+                    <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+                        <Grid Margin="42,-5,32,42">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid>
+                                <internal:NavigationHeaderControl Margin="0,8,0,17" VerticalAlignment="Center" x:Name="PART_NavigationHeader" Content="{TemplateBinding Header}" ContentTemplate="{TemplateBinding HeaderTemplate}"
+                                                                BackCommand="{TemplateBinding BackCommand}" ShowBackButton="{TemplateBinding ShowBackButton}" />
+                            </Grid>
+                            <ContentPresenter Grid.Row="1" Margin="{TemplateBinding Padding}" />
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
