--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -14,6 +14,7 @@
              xmlns:dMes="clr-namespace:HmiPro.Views.DMes"
              xmlns:dMes1="clr-namespace:HmiPro.ViewModels.DMes"
              xmlns:controls="clr-namespace:HmiPro.Controls"
+             xmlns:panels="clr-namespace:HmiPro.Controls.Panels"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <dxmvvm:Interaction.Behaviors>
@@ -54,7 +55,7 @@
                         </dxlc:FlowLayoutControl>
                     </DataTemplate>
                     <!--任务页面-->
-                    <DataTemplate DataType="{x:Type Model:SchTaskTab}">
+                    <!--<DataTemplate DataType="{x:Type Model:SchTaskTab}">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -100,7 +101,48 @@
                                 </Grid>
                             </Grid>
                         </Grid>
+                    </DataTemplate>-->
+                    <!--新任务页面-->
+                    <DataTemplate DataType="{x:Type Model:SchTaskTab}">
+                        <DockPanel>
+                            <dMes:TaskSelectPanel DockPanel.Dock="Left" DataContext="{Binding Path=.}"/>
+                                <Grid>
+                                    <Grid.Resources>
+                                        <Style TargetType="dxe:InplaceBaseEdit">
+                                            <Setter Property="FontSize" Value="12"></Setter>
+                                        </Style>
+                                        <Style TargetType="Button">
+                                            <Setter Property="FontSize" Value="12"></Setter>
+                                        </Style>
+                                    </Grid.Resources>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="50"/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*"/>
+                                            <RowDefinition Height="*"></RowDefinition>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" ><Run>上机人员: </Run>  <Run Text="{Binding Path=EmployeeStr,Mode=OneWay}"/></TextBlock>
+                                        <TextBlock Grid.Row="1" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                        <Run >开始：</Run> <Run Text="{Binding Path=SelectedTask.PsTimeStr,Mode=OneWay}"/><Run>  结束：</Run><Run Text="{Binding SelectedTask.PdTimeStr,Mode=OneWay}"/>
+                                        </TextBlock>
+                                    </Grid>
+                                    <dx:DXTabControl Grid.Row="1" ItemsSource="{Binding Path=MqSchTaskDetails}" ItemHeaderTemplate="{StaticResource TabHeader}" >
+                                        <dx:DXTabControl.Resources>
+                                            <DataTemplate DataType="{x:Type dMes1:SchTaskAxisViewModel}">
+                                                <dMes:SchTaskAxisView DataContext="{Binding Path=.}"/>
+                                            </DataTemplate>
+                                            <DataTemplate DataType="{x:Type dMes1:CraftBomViewModel}">
+                                                <dMes:CraftBomView DataContext="{Binding Path=.}"/>
+                                            </DataTemplate>
+                                        </dx:DXTabControl.Resources>
+                                    </dx:DXTabControl>
+                                </Grid>
+                        </DockPanel>
                     </DataTemplate>
+                    <!--扫描物料页面-->
                     <DataTemplate DataType="{x:Type Model:ScanMaterialTab}">
                         <StackPanel DataContext ="{Binding  Path=MqScanMaterial}">
                             <StackPanel.Resources>
