--- a/HmiPro/Themes/Templates.xaml
+++ b/HmiPro/Themes/Templates.xaml
@@ -4,7 +4,8 @@
                     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
                     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
                     xmlns:helpers="clr-namespace:HmiPro.Helpers"
-                    xmlns:models="clr-namespace:HmiPro.Redux.Models">
+                    xmlns:models="clr-namespace:HmiPro.Redux.Models"
+                    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Converts.xaml" />
@@ -72,5 +73,23 @@
             </dxlc:Tile.ContentTemplate>
         </controls:TileExt>
     </DataTemplate>
-
+    <Style x:Key="HideButtonStyle" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Border BorderThickness="0" Background="{TemplateBinding Background}">
+                        <Grid>
+                            <Image Stretch="None" VerticalAlignment="Center" HorizontalAlignment="Center"
+                                   Source="/HmiPro;component/Resources/arrow-right.png"
+                                   Visibility="{TemplateBinding IsChecked, Converter={dxmvvm:BooleanToVisibilityConverter Inverse=True}}"/>
+                            <Image Stretch="None" VerticalAlignment="Center" HorizontalAlignment="Center"
+                                   Source="/HmiPro;component/Resources/arrow-left.png"
+                                   Visibility="{TemplateBinding IsChecked, Converter={dxmvvm:BooleanToVisibilityConverter}}"/>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
