--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -105,27 +105,26 @@
                     <!--新任务页面-->
                     <DataTemplate DataType="{x:Type Model:SchTaskTab}">
                         <DockPanel>
+                            <DockPanel.Resources>
+                                <Style TargetType="dxe:InplaceBaseEdit">
+                                    <Setter Property="FontSize" Value="12"></Setter>
+                                </Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="FontSize" Value="12"></Setter>
+                                </Style>
+                            </DockPanel.Resources>
                             <dMes:TaskSelectPanel DockPanel.Dock="Left" DataContext="{Binding Path=.}"/>
                             <Grid>
-                                <Grid.Resources>
-                                    <Style TargetType="dxe:InplaceBaseEdit">
-                                        <Setter Property="FontSize" Value="12"></Setter>
-                                    </Style>
-                                    <Style TargetType="Button">
-                                        <Setter Property="FontSize" Value="12"></Setter>
-                                    </Style>
-                                </Grid.Resources>
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="*"></RowDefinition>
-                                    </Grid.RowDefinitions>
-                                    <TextBlock FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" ><Run>上机人员: </Run>  <Run Text="{Binding Path=EmployeeStr,Mode=OneWay}"/></TextBlock>
-                                    <TextBlock Grid.Row="1" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="32"/>
+                                    <RowDefinition Height="32"></RowDefinition>
+                                    <RowDefinition Height="*"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" ><Run>上机人员: </Run>  <Run Text="{Binding Path=EmployeeStr,Mode=OneWay}"/></TextBlock>
+                                <TextBlock Grid.Row="1" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
                                         <Run >开始：</Run> <Run Text="{Binding Path=SelectedTask.PsTimeStr,Mode=OneWay}"/><Run>  结束：</Run><Run Text="{Binding SelectedTask.PdTimeStr,Mode=OneWay}"/>
-                                    </TextBlock>
-                                </Grid>
-                                <dx:DXTabControl Grid.Row="1" ItemsSource="{Binding Path=MqSchTaskDetails}" ItemHeaderTemplate="{StaticResource TabHeader}" >
+                                </TextBlock>
+                                <dx:DXTabControl Grid.Row="2" ItemsSource="{Binding Path=MqSchTaskDetails}" ItemHeaderTemplate="{StaticResource TabHeader}" >
                                     <dx:DXTabControl.Resources>
                                         <DataTemplate DataType="{x:Type dMes1:SchTaskAxisViewModel}">
                                             <dMes:SchTaskAxisView DataContext="{Binding Path=.}"/>
