update:任务完成率修成成百分比

--- a/HmiPro/Views/DMes/SchTaskAxisView.xaml
+++ b/HmiPro/Views/DMes/SchTaskAxisView.xaml
@@ -28,7 +28,7 @@
             <dxg:GridColumn Width="0.5*" Header="序号" FieldName="Index"/>
             <dxg:GridColumn Width="*" Header="长度" FieldName="length"/>
             <dxg:GridColumn Width="*" Header="颜色" FieldName="color" />
-            <dxg:GridColumn Width="*" Header="完成率" FieldName="CompletedRate"/>
+            <dxg:GridColumn Width="*" Header="完成率" FieldName="CompletedRateStr"/>
             <dxg:GridColumn Width="*" Header="状态" FieldName="State"/>
             <dxg:GridColumn Header="操作" Width="2*" FieldName="CanStart">
                 <dxg:GridColumn.DisplayTemplate>
