--- a/HmiPro/Views/Sys/TestView.xaml
+++ b/HmiPro/Views/Sys/TestView.xaml
@@ -22,9 +22,9 @@
                 <Button Content="关闭报警灯" Height="50" Width="200" Command="{Binding Path=CloseAlarmCommand}"></Button>
                 <Button Content="关闭显示器" Height="50" Width="200" Command="{Binding Path=CloseScreenCommand}"></Button>
                 <Button Content="打开显示器" Height="50" Width="200" Command="{Binding Path=OpenScreenCommand}"></Button>
-                <!--<Button Content="待机显示器" Height="50" Width="200" Command="{Binding Path=StandbyScreenCommand}"></Button>-->
                 <Button Content="关闭显示器 5s" Height="50" Width="200" Command="{Binding Path=CloseScreenCommand}"  CommandParameter="5"></Button>
                 <Button Content="显示通知" Height="50" Width="200" Command="{Binding Path=ShowNotificationCommand}"  ></Button>
+                <Button Content="显示键盘" Height="50" Width="200" Command="{Binding Path=OskCommand}"  ></Button>
                 <Button Content="检查更新" Height="50" Width="200" Command="{Binding Path=CheckUpdateCommand}"  ></Button>
             </dxlc:FlowLayoutControl>
         </Grid>
