--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -111,12 +111,13 @@
                                     <RowDefinition Height="32"></RowDefinition>
                                     <RowDefinition Height="*"></RowDefinition>
                                 </Grid.RowDefinitions>
-                                <DockPanel Grid.Row="0">
-                                    <TextBlock DockPanel.Dock="Left" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" ><Run>上机人员: </Run>  <Run Text="{Binding Path=EmployeeStr,Mode=OneWay}"/></TextBlock>
-                                    <TextBlock DockPanel.Dock="Right" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <StackPanel Grid.Row="0" Orientation="Horizontal" Height="32">
+                                    <TextBlock Margin="0,0,20,0"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" ><Run>上机人员: </Run>  <Run Text="{Binding Path=EmployeeStr,Mode=OneWay}"/></TextBlock>
+                                    <TextBlock  Margin="0,0,20,0"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"><Run>总轴数: </Run>  <Run Text="{Binding Path=SelectedTask.axisParam.Count,Mode=OneWay}"/></TextBlock>
+                                    <TextBlock  Margin="0,0,20,0"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
                                      <Run Text="{Binding Path=SelectedTask.PsTimeStr,Mode=OneWay}"/><Run>--</Run><Run Text="{Binding SelectedTask.PdTimeStr,Mode=OneWay}"/>
                                     </TextBlock>
-                                </DockPanel>
+                                </StackPanel>
 
                                 <dx:DXTabControl Grid.Row="1" ItemsSource="{Binding Path=MqSchTaskDetails}" SelectedIndex="{Binding Path=ViewStore.TaskTabSelectedIndex}" ItemHeaderTemplate="{StaticResource TabHeader}" >
                                     <dx:DXTabControl.Resources>
