--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -18,6 +18,7 @@
              xmlns:models="clr-namespace:HmiPro.Redux.Models"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
+
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:DispatcherService />
         <dxmvvm:EventToCommand EventName="Loaded" Command="{Binding OnLoadedCommand}"/>
@@ -115,7 +116,7 @@
                                     <TextBlock Margin="0,0,20,0"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" ><Run>上机人员: </Run>  <Run Text="{Binding Path=EmployeeStr,Mode=OneWay}"/></TextBlock>
                                     <TextBlock  Margin="0,0,20,0"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"><Run>总轴数: </Run>  <Run Text="{Binding Path=SelectedTask.axisParam.Count,Mode=OneWay}"/></TextBlock>
                                     <TextBlock  Margin="0,0,20,0"  FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                     <Run Text="{Binding Path=SelectedTask.PsTimeStr,Mode=OneWay}"/><Run>--</Run><Run Text="{Binding SelectedTask.PdTimeStr,Mode=OneWay}"/>
+                                     <Run Text="{Binding Path=SelectedTask.pstime,Mode=OneWay,Converter={StaticResource JavaTimeConvert},ConverterParameter='yyyy-MM-dd HH:mm'}"/><Run>--</Run><Run Text="{Binding SelectedTask.pdtime,Mode=OneWay,Converter={StaticResource JavaTimeConvert},ConverterParameter='yyyy-MM-dd HH:mm'}"/>
                                     </TextBlock>
                                 </StackPanel>
 
