--- a/HmiPro/Views/DMes/DMesCoreView.xaml
+++ b/HmiPro/Views/DMes/DMesCoreView.xaml
@@ -67,7 +67,7 @@
                                 <Button Grid.Column="0" Content="显示键盘" Width="200" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl},Path=DataContext.CallOskCommand}"></Button>
                                 <Button Grid.Column="1" Content="提交" Width="200" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl},Path=DataContext.SubmitDpmsCommand}"></Button>
                             </Grid>
-                            <dxlc:FlowLayoutControl ItemsSource="{Binding Path=Dpms}" Orientation="Horizontal" BreakFlowToFit="True">
+                            <dxlc:FlowLayoutControl ItemsSource="{Binding Path=Dpms}" Orientation="Vertical" BreakFlowToFit="True">
                                 <dxlc:FlowLayoutControl.ItemTemplate>
                                     <DataTemplate DataType="{x:Type models:Dpm}">
                                         <Grid>
